kubernetes/apps/prowlarr/flaresolverr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr@sha256:139dfee1c6f89249c8d665d1333a42e8ec74ec0a86bc6bb1c8461e10d3a66a47
          ports:
            - { name: http, containerPort: 8191 }
          resources:
            requests: { cpu: 100m, memory: 512Mi }
            limits: { memory: 2Gi }
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: prowlarr
spec:
  selector:
    app: flaresolverr
  ports:
    - { name: http, port: 8191, targetPort: 8191 }
