kubernetes/apps/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - { name: http, port: 9696, targetPort: 9696 }
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: prowlarr
spec:
  selector:
    app: flaresolverr
  ports:
    - { name: http, port: 8191, targetPort: 8191 }
